--- a/package.json
+++ b/package.json
@@ -13,26 +13,33 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/common": "~8.1.2",
     "@angular/core": "~8.1.2",
+    "@angular/fire": "^5.3.0",
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@firebase/app": "^0.5.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.18.1-beta.5",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "angularfire2": "^5.3.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
-    "rxjs": "~6.5.1",
+    "firebase": "^7.6.2",
+    "ionic-angular": "^3.9.9",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.801.3",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
