--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
     "firebase": "^7.6.2",
+    "google": "^2.1.0",
     "ionic-angular": "^3.9.9",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
