--- a/package.json
+++ b/package.json
@@ -11,27 +11,37 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
     "@angular/core": "5.2.11",
+    "@angular/fire": "^5.3.0",
     "@angular/forms": "^5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@firebase/app": "^0.5.2",
     "@ionic-native/core": "4.20.0",
+    "@ionic-native/geolocation": "^5.19.1",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
+    "@types/googlemaps": "^3.39.2",
+    "@types/node": "^13.5.0",
+    "angularfire2": "^5.3.0",
+    "firebase": "^7.7.0",
+    "googlemaps": "^1.12.0",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.5.4",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.4",
-    "typescript": "2.6.2"
+    "typescript": "^3.7.5"
   },
   "description": "An Ionic project"
 }
