--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
   "dependencies": {
     "@agm/core": "^1.0.0",
     "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
+    "@angular/common": "^5.2.11",
+    "@angular/compiler": "^5.2.11",
     "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
+    "@angular/core": "^5.2.11",
     "@angular/fire": "^5.3.0",
     "@angular/forms": "^5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/platform-browser": "^5.2.11",
+    "@angular/platform-browser-dynamic": "^5.2.11",
     "@firebase/app": "^0.5.2",
-    "@ionic-native/core": "4.20.0",
+    "@ionic-native/core": "^4.20.0",
     "@ionic-native/geolocation": "^5.19.1",
-    "@ionic-native/splash-screen": "4.20.0",
-    "@ionic-native/status-bar": "4.20.0",
+    "@ionic-native/splash-screen": "^4.20.0",
+    "@ionic-native/status-bar": "^4.20.0",
     "@ionic/storage": "2.2.0",
     "@types/node": "^13.5.0",
     "angularfire2": "^5.3.0",
     "firebase": "^7.7.0",
     "googlemaps": "^1.12.0",
-    "ionic-angular": "3.9.9",
+    "ionic-angular": "^3.9.9",
     "ionic-native": "^2.9.0",
-    "ionicons": "3.0.0",
+    "ionicons": "^4.6.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.5.4",
     "sw-toolbox": "3.6.0",
