--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/storage": "2.2.0",
     "@types/node": "^13.5.0",
     "angularfire2": "^5.3.0",
+    "cordova-android": "8.1.0",
     "firebase": "^7.7.0",
     "googlemaps": "^1.12.0",
     "ionic-angular": "^3.9.9",
@@ -42,7 +43,28 @@
   "devDependencies": {
     "@ionic/app-scripts": "3.2.4",
     "@types/googlemaps": "^3.39.2",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "typescript": "^3.7.5"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
