--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angularfire2": "^5.3.0",
     "cordova-android": "8.1.0",
     "firebase": "^7.7.0",
+    "google-distance-matrix": "^1.1.1",
     "googlemaps": "^1.12.0",
     "ionic-angular": "^3.9.9",
     "ionic-native": "^2.9.0",
