--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ionic-angular": "^3.9.9",
     "ionic-native": "^2.9.0",
     "ionicons": "^4.6.3",
+    "moment": "^2.24.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
