--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@firebase/app": "^0.5.2",
     "@ionic-native/core": "^4.20.0",
+    "@ionic-native/document-viewer": "^4.20.0",
+    "@ionic-native/file": "^5.26.0",
     "@ionic-native/geolocation": "^5.19.1",
     "@ionic-native/splash-screen": "^4.20.0",
     "@ionic-native/status-bar": "^4.20.0",
@@ -30,6 +32,9 @@
     "@types/node": "^13.5.0",
     "angularfire2": "^5.3.0",
     "cordova-android": "8.1.0",
+    "cordova-browser": "6.0.0",
+    "cordova-plugin-document-viewer": "^0.9.13",
+    "cordova-plugin-file": "^6.0.2",
     "firebase": "^7.7.0",
     "google-distance-matrix": "^1.1.1",
     "googlemaps": "^1.12.0",
@@ -64,10 +69,13 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-document-viewer": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
