--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@firebase/app": "^0.5.2",
     "@ionic-native/core": "^4.20.0",
     "@ionic-native/document-viewer": "^4.20.0",
-    "@ionic-native/file": "^5.26.0",
+    "@ionic-native/file": "^4.20.0",
+    "@ionic-native/file-chooser": "^5.26.0",
+    "@ionic-native/file-opener": "^5.26.0",
+    "@ionic-native/file-path": "^5.26.0",
     "@ionic-native/geolocation": "^5.19.1",
     "@ionic-native/splash-screen": "^4.20.0",
     "@ionic-native/status-bar": "^4.20.0",
@@ -35,6 +38,9 @@
     "cordova-browser": "6.0.0",
     "cordova-plugin-document-viewer": "^0.9.13",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-opener2": "^3.0.2",
+    "cordova-plugin-filechooser": "^1.2.0",
+    "cordova-plugin-filepath": "^1.5.8",
     "firebase": "^7.7.0",
     "google-distance-matrix": "^1.1.1",
     "googlemaps": "^1.12.0",
@@ -71,7 +77,12 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-document-viewer": {}
+      "cordova-plugin-document-viewer": {},
+      "cordova-plugin-file-opener2": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-filepath": {}
     },
     "platforms": [
       "android",
