--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/file-opener": "^5.26.0",
     "@ionic-native/file-path": "^5.26.0",
     "@ionic-native/geolocation": "^5.19.1",
+    "@ionic-native/in-app-browser": "^5.26.0",
     "@ionic-native/splash-screen": "^4.20.0",
     "@ionic-native/status-bar": "^4.20.0",
     "@ionic/storage": "2.2.0",
@@ -41,6 +42,7 @@
     "cordova-plugin-file-opener2": "^3.0.2",
     "cordova-plugin-filechooser": "^1.2.0",
     "cordova-plugin-filepath": "^1.5.8",
+    "cordova-plugin-inappbrowser": "^3.2.0",
     "firebase": "^7.7.0",
     "google-distance-matrix": "^1.1.1",
     "googlemaps": "^1.12.0",
@@ -82,7 +84,8 @@
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
       "cordova-plugin-filechooser": {},
-      "cordova-plugin-filepath": {}
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
