--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@firebase/app": "^0.5.2",
+    "@ionic-native/call-number": "^5.26.0",
     "@ionic-native/core": "^4.20.0",
     "@ionic-native/document-viewer": "^4.20.0",
     "@ionic-native/file": "^4.20.0",
@@ -35,6 +36,7 @@
     "@ionic/storage": "2.2.0",
     "@types/node": "^13.5.0",
     "angularfire2": "^5.3.0",
+    "call-number": "^1.0.1",
     "cordova-android": "8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-document-viewer": "^0.9.13",
@@ -85,7 +87,8 @@
       },
       "cordova-plugin-filechooser": {},
       "cordova-plugin-filepath": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "mx.ferreyra.callnumber": {}
     },
     "platforms": [
       "android",
