--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^13.5.0",
     "angularfire2": "^5.3.0",
     "call-number": "^1.0.1",
+    "cordova": "^10.0.0",
     "cordova-android": "8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-document-viewer": "^0.9.13",
@@ -52,6 +53,7 @@
     "ionic-native": "^2.9.0",
     "ionicons": "^4.6.3",
     "moment": "^2.24.0",
+    "node-sass": "^5.0.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
@@ -66,7 +68,6 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.4",
-    "node-sass": "^4.13.1",
     "typescript": "^3.7.5"
   },
   "description": "An Ionic project",
