--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@ionic-native/file-path": "^5.26.0",
         "@ionic-native/geolocation": "^5.19.1",
         "@ionic-native/in-app-browser": "^5.26.0",
+        "@ionic-native/keyboard": "^5.31.1",
         "@ionic-native/splash-screen": "^4.20.0",
         "@ionic-native/status-bar": "^4.20.0",
         "@ionic/storage": "2.2.0",
@@ -95,7 +96,5 @@
             "browser"
         ]
     },
-    "config": {
-        
-    }
+    "config": {}
 }
