--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^3.2.3",
+        "@ionic/lab": "3.2.10",
         "@types/googlemaps": "^3.39.2",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.2.0",
