--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "cordova": "^10.0.0",
         "cordova-android": "8.1.0",
         "cordova-browser": "6.0.0",
+        "cordova-ios": "6.2.0",
         "cordova-plugin-document-viewer": "^0.9.13",
         "cordova-plugin-file": "^6.0.2",
         "cordova-plugin-file-opener2": "^3.0.2",
@@ -94,7 +95,8 @@
         },
         "platforms": [
             "android",
-            "browser"
+            "browser",
+            "ios"
         ]
     },
     "config": {}
