--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
         "angularfire2": "^5.3.0",
         "call-number": "^1.0.1",
         "cordova": "^10.0.0",
-        "cordova-android": "8.1.0",
         "cordova-browser": "6.0.0",
         "cordova-ios": "6.2.0",
         "cordova-plugin-document-viewer": "^0.9.13",
@@ -59,19 +58,20 @@
         "rxjs": "^6.3.3",
         "rxjs-compat": "^6.3.3",
         "sw-toolbox": "3.6.0",
+        "typescript": "^3.7.5",
         "zone.js": "0.8.29"
     },
     "devDependencies": {
         "@ionic/app-scripts": "^3.2.3",
         "@ionic/lab": "3.2.10",
         "@types/googlemaps": "^3.39.2",
+        "cordova-android": "^9.0.0",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.2.0",
         "cordova-plugin-ionic-webview": "^4.1.3",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
-        "cordova-plugin-whitelist": "^1.3.4",
-        "typescript": "^3.7.5"
+        "cordova-plugin-whitelist": "^1.3.4"
     },
     "description": "An Ionic project",
     "cordova": {
@@ -94,9 +94,9 @@
             "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
-            "android",
             "browser",
-            "ios"
+            "ios",
+            "android"
         ]
     },
     "config": {}
