--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "NWO Navigate",
+    "name": "navigate",
+    "description": "An Ionic project",
     "version": "0.0.1",
     "author": "Ionic Framework",
     "homepage": "http://ionicframework.com/",
@@ -38,7 +39,7 @@
         "@types/node": "^13.5.0",
         "angularfire2": "^5.3.0",
         "call-number": "^1.0.1",
-        "cordova": "^9.0.0",
+        "cordova": "^10.0.0",
         "cordova-browser": "6.0.0",
         "cordova-ios": "6.2.0",
         "cordova-plugin-document-viewer": "^0.9.13",
@@ -47,6 +48,7 @@
         "cordova-plugin-filechooser": "^1.2.0",
         "cordova-plugin-filepath": "^1.5.8",
         "cordova-plugin-inappbrowser": "^3.2.0",
+        "cordova-sqlite-storage": "^6.0.0",
         "firebase": "^7.7.0",
         "google-distance-matrix": "^1.1.1",
         "googlemaps": "^1.12.0",
@@ -55,8 +57,8 @@
         "ionicons": "^4.6.3",
         "moment": "^2.24.0",
         "node-sass": "^5.0.0",
-        "rxjs": "^6.5.0",
-        "rxjs-compat": "^6.3.3",
+        "rxjs": "^6.3.3",
+        "rxjs-compat": "^6.6.7",
         "sw-toolbox": "3.6.0",
         "typescript": "^3.7.5",
         "zone.js": "0.8.29"
@@ -73,7 +75,6 @@
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.4"
     },
-    "description": "An Ionic project",
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
@@ -91,7 +92,8 @@
             },
             "cordova-plugin-filechooser": {},
             "cordova-plugin-filepath": {},
-            "cordova-plugin-inappbrowser": {}
+            "cordova-plugin-inappbrowser": {},
+            "cordova-sqlite-storage": {}
         },
         "platforms": [
             "browser",
